; ModuleID = '/home/carl/AnghaBench/darwin-xnu/bsd/kern/extr_kpi_mbuf.c_mbuf_allocpacket.c'
source_filename = "/home/carl/AnghaBench/darwin-xnu/bsd/kern/extr_kpi_mbuf.c_mbuf_allocpacket.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.mbuf = type { i32 }

@EINVAL = common dso_local global i64 0, align 8
@ENOBUFS = common dso_local global i64 0, align 8
@ENOMEM = common dso_local global i64 0, align 8

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i64 @mbuf_allocpacket(i32 %0, i64 %1, i32* %2, %struct.mbuf** %3) #0 {
  %5 = alloca i32, align 4
  %6 = alloca i64, align 8
  %7 = alloca i32*, align 8
  %8 = alloca %struct.mbuf**, align 8
  %9 = alloca i64, align 8
  %10 = alloca %struct.mbuf*, align 8
  %11 = alloca i32, align 4
  %12 = alloca i32, align 4
  store i32 %0, i32* %5, align 4
  store i64 %1, i64* %6, align 8
  store i32* %2, i32** %7, align 8
  store %struct.mbuf** %3, %struct.mbuf*** %8, align 8
  store i32 1, i32* %11, align 4
  %13 = load i32*, i32** %7, align 8
  %14 = icmp ne i32* %13, null
  br i1 %14, label %15, label %18

15:                                               ; preds = %4
  %16 = load i32*, i32** %7, align 8
  %17 = load i32, i32* %16, align 4
  br label %19

18:                                               ; preds = %4
  br label %19

19:                                               ; preds = %18, %15
  %20 = phi i32 [ %17, %15 ], [ 0, %18 ]
  store i32 %20, i32* %12, align 4
  %21 = load i64, i64* %6, align 8
  %22 = icmp eq i64 %21, 0
  br i1 %22, label %23, label %25

23:                                               ; preds = %19
  %24 = load i64, i64* @EINVAL, align 8
  store i64 %24, i64* %9, align 8
  br label %64

25:                                               ; preds = %19
  %26 = load i64, i64* %6, align 8
  %27 = load i32*, i32** %7, align 8
  %28 = icmp ne i32* %27, null
  br i1 %28, label %29, label %30

29:                                               ; preds = %25
  br label %31

30:                                               ; preds = %25
  br label %31

31:                                               ; preds = %30, %29
  %32 = phi i32* [ %12, %29 ], [ null, %30 ]
  %33 = load i32, i32* %5, align 4
  %34 = call %struct.mbuf* @m_allocpacket_internal(i32* %11, i64 %26, i32* %32, i32 %33, i32 1, i32 0)
  store %struct.mbuf* %34, %struct.mbuf** %10, align 8
  %35 = load %struct.mbuf*, %struct.mbuf** %10, align 8
  %36 = icmp eq %struct.mbuf* %35, null
  br i1 %36, label %37, label %54

37:                                               ; preds = %31
  %38 = load i32*, i32** %7, align 8
  %39 = icmp ne i32* %38, null
  br i1 %39, label %40, label %51

40:                                               ; preds = %37
  %41 = load i32*, i32** %7, align 8
  %42 = load i32, i32* %41, align 4
  %43 = icmp ne i32 %42, 0
  br i1 %43, label %44, label %51

44:                                               ; preds = %40
  %45 = load i32, i32* %12, align 4
  %46 = load i32*, i32** %7, align 8
  %47 = load i32, i32* %46, align 4
  %48 = icmp ugt i32 %45, %47
  br i1 %48, label %49, label %51

49:                                               ; preds = %44
  %50 = load i64, i64* @ENOBUFS, align 8
  store i64 %50, i64* %9, align 8
  br label %53

51:                                               ; preds = %44, %40, %37
  %52 = load i64, i64* @ENOMEM, align 8
  store i64 %52, i64* %9, align 8
  br label %53

53:                                               ; preds = %51, %49
  br label %63

54:                                               ; preds = %31
  %55 = load i32*, i32** %7, align 8
  %56 = icmp ne i32* %55, null
  br i1 %56, label %57, label %60

57:                                               ; preds = %54
  %58 = load i32, i32* %12, align 4
  %59 = load i32*, i32** %7, align 8
  store i32 %58, i32* %59, align 4
  br label %60

60:                                               ; preds = %57, %54
  store i64 0, i64* %9, align 8
  %61 = load %struct.mbuf*, %struct.mbuf** %10, align 8
  %62 = load %struct.mbuf**, %struct.mbuf*** %8, align 8
  store %struct.mbuf* %61, %struct.mbuf** %62, align 8
  br label %63

63:                                               ; preds = %60, %53
  br label %64

64:                                               ; preds = %63, %23
  %65 = load i64, i64* %9, align 8
  ret i64 %65
}

declare dso_local %struct.mbuf* @m_allocpacket_internal(i32*, i64, i32*, i32, i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
